# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [Unreleased]
### Added
- [GUI] Middle click to edit an object in a new tab
- [SCRIPT] [WIPE] New script to reset a bootstrapped node
### Fixed
- [PORTAL] [SELF_SERVICE] Disabled workflows listed
- [MONGODB] Allow clusters with more than 7 nodes
- [SERVICES] [FRONTEND] Correctly get Darwin objects when building rsyslog configurations
- [GUI] [RSYSLOG] Bring more details on GUI when configuration builds fail
- [SERVICES] [FRONTEND] Improve deletion messages and conditions on GUI and API
- [API_PARSER] Ensure modifications in configuration are not overriden by running instances
- [FRONTEND] Hot-disable a collector manually
- [SERVICES] Prevent errors when deleted configuration files do not exist
- [CLUSTER_JOIN] Fix writing of certificates on new node's disk
- [REDIS] Use proper Sentinel client when updating service
### Changed
- [API_PARSER] [CROWDSTRIKE] Evolve collector to use API v2 instead of v1
- [FILEBEAT] Separate building configurations and restarting service
- [GUI] Improve AJAX requests management
- [CLUSTER] Improve node import routine
- [CLUSTER] Improve node deletion from the gui


## [2.25.0] - 2025-04-30
### Added
- [API_PARSER] [CISCO_MERAKI] Add support for configuration change logs
### Fixed
- [API_PARSER] [BEYONDTRUST_PRA] Catch invalid lines


## [2.24.1] - 2025-04-17
### Fixed
- [API_PARSER] [CORTEX_XDR] Update time when there is no log during one day


## [2.24.0] - 2025-04-14
### Added
- [API_PARSER] [PERCEPTION_POINT_XRAY] New collector
- [API_PARSER] [EXTRAHOP] New collector
- [FRONTEND] [RSYSLOG] New health check option
### Changed
- [DEPENDENCIES]
  - cryptography 43.0.1 -> 44.0.2
  - django 4.2.18 -> 4.2.20
  - djongo 1.3.7 -> 1.3.7.2
  - gunicorn 22.0.0 -> 23.0.0