@@ -2316,6 +2316,22 @@
                           </div>
                         </div>
                       </div>
+                      <div class="col-md-12 api_clients_row" id="api_hornetsecurity_row">
+                        <div class="form-group">
+                          <label class="col-sm-3 control-label">{{ form.hornetsecurity_app_id.label }}</label>
+                          <div class="col-sm-5">
+                            {{ form.hornetsecurity_app_id }}
+                            {{ form.hornetsecurity_app_id.errors|safe }}
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="col-sm-3 control-label">{{ form.hornetsecurity_token.label }}</label>
+                          <div class="col-sm-5">
+                            {{ form.hornetsecurity_token }}
+                            {{ form.hornetsecurity_token.errors|safe }}
+                          </div>
+                        </div>
+                      </div>
                       <div class="col-md-12 api-mode">
                         <div class="text-center mar-btm">
                           <button class="btn btn-warning" id="test_api_parser" type="button">
