@@ -82,6 +82,7 @@ from toolkit.api_parser.varonis.varonis import VaronisParser
 from toolkit.api_parser.armis_centrix.armis_centrix import ArmisCentrixParser
 from toolkit.api_parser.perception_point_x_ray.perception_point_x_ray import PerceptionPointXRayParser
 from toolkit.api_parser.extrahop.extrahop import ExtrahopParser
+from toolkit.api_parser.hornetsecurity.hornetsecurity import HornetSecurityParser
 
 logging.config.dictConfig(settings.LOG_SETTINGS)
 logger = logging.getLogger('gui')
@@ -144,6 +145,7 @@ PARSER_LIST = {
     "armis_centrix": ArmisCentrixParser,
     "perception_point_x_ray": PerceptionPointXRayParser,
     "extrahop": ExtrahopParser,
+    "hornetsecurity": HornetSecurityParser,
 }
 
 class ParserDoesNotExist(Exception):
