@@ -7,6 +7,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ## [Unreleased]
 ### Added
+- [API_PARSER] [HORNETSECURITY] New collector
 - [GUI] Middle click to edit an object in a new tab
 - [SCRIPT] [WIPE] New script to reset a bootstrapped node
 ### Fixed
